# eyrie

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  init-mongo.js  requirements-local.txt  run-dev.py  run-local.py
.github/workflows/: changelog-check.yml  publish_docker_on_release.yml
backend/: Dockerfile  pyproject.toml
backend/eyrie_api/: __version__.py  app.py  main.py
backend/eyrie_api/auth/: middleware.py
backend/eyrie_api/config/: settings.py
backend/eyrie_api/database/: connection.py  sample_operations.py  user_operations.py
backend/eyrie_api/models/: auth.py  samples.py
backend/eyrie_api/routes/: admin.py  auth.py  frontend.py  samples.py
backend/eyrie_api/utils/: json_encoder.py
data/krona/: sample_001_krona.html
data/pipeline/: sample_001_report.html
data/quality/: sample_001_quality.html
data/test/: 2025-09-30_09-46-56_master.html  barcode01_config.yaml  barcode02_config.yaml  run_config.yaml  samplesheet_merged.csv  versions.yml
data/test/fastqc/: barcode01_fastqc.html  barcode02_fastqc.html
data/test/krona/: barcode01_krona.html  barcode02_krona.html
data/test/nanoplot_processed/: barcode01_nanoplot_processed_LengthvsQualityScatterPlot_dot.html  barcode01_nanoplot_processed_LengthvsQualityScatterPlot_kde.html  barcode01_nanoplot_processed_NanoPlot-report.html  barcode01_nanoplot_processed_Non_weightedHistogramReadlength.html  barcode01_nanoplot_processed_Non_weightedLogTransformed_HistogramReadlength.html  barcode01_nanoplot_processed_WeightedHistogramReadlength.html  barcode01_nanoplot_processed_WeightedLogTransformed_HistogramReadlength.html  barcode01_nanoplot_processed_Yield_By_Length.html  barcode02_nanoplot_processed_LengthvsQualityScatterPlot_dot.html  barcode02_nanoplot_processed_LengthvsQualityScatterPlot_kde.html  barcode02_nanoplot_processed_NanoPlot-report.html  barcode02_nanoplot_processed_NanoStats.txt  barcode02_nanoplot_processed_Non_weightedHistogramReadlength.html  barcode02_nanoplot_processed_Non_weightedLogTransformed_HistogramReadlength.html  barcode02_nanoplot_processed_WeightedHistogramReadlength.html  barcode02_nanoplot_processed_WeightedLogTransformed_HistogramReadlength.html  barcode02_nanoplot_processed_Yield_By_Length.html  versions.yml
data/test/nanoplot_unprocessed/: barcode01_nanoplot_unprocessed_LengthvsQualityScatterPlot_dot.html  barcode01_nanoplot_unprocessed_LengthvsQualityScatterPlot_kde.html  barcode01_nanoplot_unprocessed_NanoPlot-report.html  barcode01_nanoplot_unprocessed_NanoStats.txt  barcode01_nanoplot_unprocessed_Non_weightedHistogramReadlength.html  barcode01_nanoplot_unprocessed_Non_weightedLogTransformed_HistogramReadlength.html  barcode01_nanoplot_unprocessed_WeightedHistogramReadlength.html  barcode01_nanoplot_unprocessed_WeightedLogTransformed_HistogramReadlength.html  barcode01_nanoplot_unprocessed_Yield_By_Length.html  barcode02_nanoplot_unprocessed_LengthvsQualityScatterPlot_dot.html  barcode02_nanoplot_unprocessed_LengthvsQualityScatterPlot_kde.html  barcode02_nanoplot_unprocessed_NanoPlot-report.html  barcode02_nanoplot_unprocessed_Non_weightedHistogramReadlength.html  barcode02_nanoplot_unprocessed_Non_weightedLogTransformed_HistogramReadlength.html  barcode02_nanoplot_unprocessed_WeightedHistogramReadlength.html  versions.yml  (+2 more)
frontend/: Dockerfile  pyproject.toml
frontend/eyrie_app/: __version__.py  app.py  wsgi.py
frontend/eyrie_app/blueprints/admin/: views.py
frontend/eyrie_app/blueprints/admin/static/js/: admin.js
frontend/eyrie_app/blueprints/admin/templates/: dashboard.html
frontend/eyrie_app/blueprints/classification/: views.py
frontend/eyrie_app/blueprints/classification/static/js/: classification.js
frontend/eyrie_app/blueprints/classification/templates/: classification.html
frontend/eyrie_app/blueprints/login/: views.py
frontend/eyrie_app/blueprints/login/templates/: index.html
frontend/eyrie_app/blueprints/nanoplot/: views.py
frontend/eyrie_app/blueprints/nanoplot/static/js/: nanoplot.js
frontend/eyrie_app/blueprints/nanoplot/templates/: nanoplot.html
frontend/eyrie_app/blueprints/sample/: views.py
frontend/eyrie_app/blueprints/sample/static/js/: sample.js  sample_classification.js  sample_core.js  sample_nanoplot.js
frontend/eyrie_app/blueprints/sample/templates/: detail.html  sample.html  sample_classification.html  sample_nanoplot.html
frontend/eyrie_app/blueprints/sample/templates/macros/: classification.html  nanoplot.html  navbar.html
frontend/eyrie_app/blueprints/samples/: views.py
frontend/eyrie_app/blueprints/samples/static/js/: samples.js
frontend/eyrie_app/blueprints/samples/templates/: index.html
frontend/eyrie_app/shared/static/css/: styles.css
frontend/eyrie_app/shared/templates/: base.html
tools/eyrie-popup/: Dockerfile  README.md  pyproject.toml
tools/eyrie-popup/popup/: __init__.py  __version__.py  api_client.py  cli.py  config.py  models.py  parser.py
tools/eyrie-popup/popup/api/: __init__.py  client.py  format.py  upload.py
tools/eyrie-popup/popup/models/: __init__.py  config.py  data.py  parsing.py
tools/eyrie-popup/popup/parser/: __init__.py  base.py  nanoplot.py  nanostats.py  taxonomic.py
tools/eyrie-popup/popup/utils/: __init__.py  file_helpers.py  spike_detection.py
(+34 files in other folders)
