[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyrie-app"
dynamic = ["version"]
description = "Eyrie Sample Manager - Web Frontend Application"
authors = [
    {name = "Ryan James Kennedy", email = "ryan.kennedy@skane.se"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bioinformatics", "sample-management", "16s", "its", "sequencing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pymongo>=4.5.0",
    "jinja2>=3.1.2",
    "Werkzeug>=2.3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
production = [
    "gunicorn>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/clinicalgenomicslund/eyrie"
Repository = "https://github.com/clinicalgenomicslund/eyrie.git"
Issues = "https://github.com/clinicalgenomicslund/eyrie/issues"

[project.scripts]
eyrie-app = "eyrie_app.wsgi:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eyrie_app*"]

[tool.setuptools.dynamic]
version = {attr = "eyrie_app.__version__.__version__"}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true