[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eyrie-popup"
version = "0.1.0"
description = "Pipeline Output Processor and UPloader for Eyrie - parsing sequencing analysis results"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan James Kennedy", email = "ryan.kennedy@skane.se"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pydantic>=1.8.0,<2.0.0",
    "PyYAML>=6.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/clinicalgenomicslund/eyrie"
Repository = "https://github.com/clinicalgenomicslund/eyrie"
Issues = "https://github.com/clinicalgenomicslund/eyrie/issues"

[project.scripts]
popup = "popup.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["popup"]